--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO7D+/V3hiYEFC6cE1ZDyNs",
+      "authorship_tag": "ABX9TyPLkMJSbkjYPuOR/NImvfIP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "id": "luKpb0gq0i3G",
         "outputId": "e58ffea3-9f83-499e-cb0d-ea1d70cd2d2d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -139,7 +139,7 @@
         "id": "kwpeSmBT1cHO",
         "outputId": "259337cd-f907-49b7-b0f0-baf824c7de23"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,10 +460,584 @@
     {
       "cell_type": "code",
       "source": [
+        "7-3\n",
+        "7*3"
+      ],
+      "metadata": {
+        "id": "1sPVeYe369DR",
+        "outputId": "f7753b20-5605-4abc-e03c-1c4ca4e7078e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "obj_G = 2"
+      ],
+      "metadata": {
+        "id": "M7GGxUz-WkDo"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(obj_G)"
+      ],
+      "metadata": {
+        "id": "2hP0YM4bWtLV",
+        "outputId": "2eeb4bd7-be1d-4aa3-8f68-a2f1ea366bb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities = ['Paris','Zurich','Rome','Berlin','London']\n",
+        "cities"
+      ],
+      "metadata": {
+        "id": "ex9bKkXTWzPV",
+        "outputId": "7f311095-8fb5-4b0b-fef3-2a0e0690141f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Paris', 'Zurich', 'Rome', 'Berlin', 'London']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities[0]"
+      ],
+      "metadata": {
+        "id": "e-M--oVRY-uQ",
+        "outputId": "02e33a03-43f2-42e8-c2a7-fb4eefdef30e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Paris'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities.insert(2,'Hong Kong')\n",
+        "cities"
+      ],
+      "metadata": {
+        "id": "bStwUZFwZRTg",
+        "outputId": "5a4b6ee0-cfd2-4bdd-8bb4-cbeb9607349f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Paris', 'Zurich', 'Hong Kong', 'Rome', 'Berlin', 'London']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(cities)"
+      ],
+      "metadata": {
+        "id": "fDSXRN5IZ9EA",
+        "outputId": "d0e6c491-aaee-4684-9e30-ee020972ba4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Paris', 'Zurich', 'Hong Kong', 'Rome', 'Berlin', 'London']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities.apend('Rio')"
+      ],
+      "metadata": {
+        "id": "F4OaGEXBaD7Q",
+        "outputId": "cea14c8e-aa9a-419d-85fc-c54edf289720",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-c42e305538f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rio'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'apend'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities.append('Rio')"
+      ],
+      "metadata": {
+        "id": "7ELbZCEZaMOh"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(cities) "
+      ],
+      "metadata": {
+        "id": "QFG9BV-3aRxS",
+        "outputId": "e776a504-d48b-4089-cbe5-d100b387205a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_list = [1,2,5,2]"
+      ],
+      "metadata": {
+        "id": "jfqHXjhzbpmZ"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities2 = cities + new_list\n",
+        "cities2"
+      ],
+      "metadata": {
+        "id": "HNSE5Fb6ciJa",
+        "outputId": "55ddd9bd-093d-42f2-bd3c-273c3a33a845",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Paris', 'Zurich', 'Hong Kong', 'Rome', 'Berlin', 'London', 'Rio', 1, 2, 5, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_list[1]=3"
+      ],
+      "metadata": {
+        "id": "0dNj3w8pctMK"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities2"
+      ],
+      "metadata": {
+        "id": "9hT5I6QOdHKq",
+        "outputId": "833f17d6-9477-49d7-bf15-bad75a6b7b33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Paris', 'Zurich', 'Hong Kong', 'Rome', 'Berlin', 'London', 'Rio', 1, 2, 5, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_list"
+      ],
+      "metadata": {
+        "id": "S2ZLctXzdIoJ",
+        "outputId": "497dc2cd-440c-4992-941b-32e87f30d548",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities2 = cities + new_list"
+      ],
+      "metadata": {
+        "id": "uPbzB05xdNM5"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities2"
+      ],
+      "metadata": {
+        "id": "k7HKNF-VdS2I",
+        "outputId": "6e01a30d-ba71-4fc7-a28c-4eea235ff83a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Paris', 'Zurich', 'Hong Kong', 'Rome', 'Berlin', 'London', 'Rio', 1, 3, 5, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "val = -2\n",
+        "\n",
+        "if val > 0:\n",
+        "  print('The value is positive')\n",
+        "\n",
+        "elif val < -10:\n",
+        "  print('Very low')\n",
+        "\n",
+        "elif val <0:\n",
+        "  print('The value is negative')\n",
+        "\n",
+        "else:\n",
+        "  print('the value equals 0')"
+      ],
+      "metadata": {
+        "id": "Ph3rADtzdXu5",
+        "outputId": "91dc43b4-402f-4a08-f70e-e5b38ecf9b38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The value is negative\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = ['apple','pear','cherry']\n",
+        "for i in fruits:\n",
+        "  test = print(i)"
+      ],
+      "metadata": {
+        "id": "QtNqV8e4euhZ",
+        "outputId": "b9f0752a-16ab-46eb-c797-021deef5abb2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "pear\n",
+            "cherry\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_of_lists = [['a','b','c'],[1,2,3]]\n",
+        "\n",
+        "for sub_list in list_of_lists:\n",
+        "  print(\"we treat the list: \", sub_list)\n",
+        "\n",
+        "  for element in sub_list:\n",
+        "    print(\"We display the element: \", element)"
+      ],
+      "metadata": {
+        "id": "hOe2T9tFhBSh",
+        "outputId": "02f5c451-759b-400f-ea7c-cc7ec606c956",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "we treat the list:  ['a', 'b', 'c']\n",
+            "We display the element:  a\n",
+            "We display the element:  b\n",
+            "We display the element:  c\n",
+            "we treat the list:  [1, 2, 3]\n",
+            "We display the element:  1\n",
+            "We display the element:  2\n",
+            "We display the element:  3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def awesome_new_function_for_area(a,b):\n",
+        "  '''\n",
+        "  function in order to calculate the area of a rectangle\n",
+        "  Parameters:\n",
+        "  a: a represents the length\n",
+        "  b: b respresents the width\n",
+        "  '''\n",
+        "\n",
+        "  my_area = a*b\n",
+        "  return my_area"
+      ],
+      "metadata": {
+        "id": "5i9u_FpMjDPP"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area1 = awesome_new_function_for_area (a=3, b=7)\n",
+        "area1"
+      ],
+      "metadata": {
+        "id": "pAG7DaYol7lS",
+        "outputId": "052c221f-854c-4af4-a8b0-205ee779b088",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area1 = awesome_new_function_for_area (4, 8)\n",
+        "area1"
+      ],
+      "metadata": {
+        "id": "u5T0-_YKm5Fl",
+        "outputId": "e89c71f5-761a-4255-bcd5-73497d3962b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list comprehension - we will use it in order to delete all the alement of a list having a particular value:\n",
+        "last_list = [0, 1, 2, 3, 4, 5, 888, 6, 7, 888, 8, 9]\n",
+        "\n",
+        "valueToBeRemoved = 888\n",
+        "last_list = [value for value in last_list if value != valueToBeRemoved]\n",
+        "last_list"
+      ],
+      "metadata": {
+        "id": "P3MzVOpKnVIY",
+        "outputId": "d672fd64-9bfb-4828-b7a8-2df364c86ce0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "1sPVeYe369DR"
+        "id": "YAWJyN4Jonsd"
       },
       "execution_count": null,
       "outputs": []
